--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -125,7 +125,6 @@
 
     .navbar__container {
         position: static;
-        height: auto;
         background-color: inherit;
     }
     
@@ -147,7 +146,7 @@
         background-color: inherit;
     }
 
-    ul.navbar__links {
+    .navbar__links {
         position: absolute;
         width: 100%;
         height: 100vh;
@@ -162,7 +161,7 @@
         transition: clip-path 400ms ease-in-out;
     }
 
-    ul.navbar__links li {
+    .navbar__links li {
         width: 100vw;
         line-height: 1;
         display: grid;
@@ -180,7 +179,7 @@
         display: none;
     }
 
-    ul.navbar__links li:first-child {
+    .navbar__links li:first-child {
         border-top: 1px solid var(--clr-accent-100);
     }
 
