--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -26,12 +26,12 @@
 }
 
 .about-us__text .main {
-    opacity: 1;
+    opacity: 0;
     transition: opacity 200ms ease-in;
 }
 
-.about-us__text .main[data-hide] {
-    opacity: 0;
+.about-us__text .main[data-show] {
+    opacity: 1;
 }
 
 .about-us__text .complement {
