--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -83,6 +83,29 @@
     padding: 6.25em 0 6.25em 2em;
 }
 
+.card[data-section='projects'] .card__body.main {
+    opacity: 0;
+    transition: opacity 200ms ease-in;
+}
+
+.card[data-section='projects'] .card__body.main[data-show] {
+    opacity: 1;
+}
+
+.card[data-section='projects'] .card__body.complement {
+    max-width: 38ch;
+    opacity: 0;
+    transform: translateX(-100%);
+    transition-property: transform, opacity;
+    transition-duration: 500ms, 200ms;
+    transition-timing-function: ease-in;
+}
+
+.card[data-section='projects'] .card__body.complement[data-show] {
+    opacity: 1;
+    transform: translateX(0);
+}
+
 .card[data-section='projects'] .card__body h3 {
     position: relative;
     display: inline-block;
@@ -109,7 +132,7 @@
     padding: var(--size-25) 0 var(--size-15) 0;
 }
 
-.card[data-section='projects'] .card__body p:not(:first-child) {
+.card[data-section='projects'] .card__body.main p:not(:first-child) {
     color: var(--clr-accent-100);
     font-family: var(--ff-secondary);
 }
@@ -119,6 +142,10 @@
     width: 100%;
     padding-block: var(--size-50);
     margin-top: auto;
+}
+
+.card[data-section='projects'] .card__body.complement p:not(:first-child) {
+    padding-top: var(--size-25);
 }
 
 @media (min-width: 69em) {
