Services card body background fixed

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
     --clr-bg-opacity-700: hsl(212, 70%, 10%, 0.7);
     --clr-bg-opacity-800: hsl(212, 70%, 10%, 0.85);
     --clr-bg-opacity-850: hsl(212, 70%, 10%, 0.9);
+    --clr-bg-opacity-900: hsl(212, 70%, 10%, 0.95);
 
     --clr-shadow-900: hsla(0, 0%, 13%, 0.5);
 
