--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Sura:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Eczar:wght@400;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Enriqueta&display=swap');
 
 :root {
@@ -22,7 +22,7 @@
 
     --clr-shadow-900: hsla(0, 0%, 13%, 0.5);
 
-    --ff-primary: 'Sura', serif;
+    --ff-primary: 'Eczar', serif;
     --ff-secondary: 'Enriqueta', serif;
 
     --fw-light: 400;
