--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:wght@500;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Enriqueta&display=swap');
 
 :root {
@@ -22,12 +22,12 @@
 
     --clr-shadow-900: hsla(0, 0%, 13%, 0.5);
 
-    --ff-primary: 'Work Sans', sans-serif;
+    --ff-primary: 'Inter Tight', sans-serif;
     --ff-secondary: 'Enriqueta', serif;
 
-    --fw-light: 400;
-    --fw-regular: 600;
-    --fw-bold: 700;
+    --fw-light: 500;
+    --fw-regular: 700;
+    --fw-bold: 800;
 
     --fs-50: 0.8rem;
     --fs-75: 0.9rem;
