--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -66,8 +66,9 @@
 
 .card[data-section='services'] .card__body h3 {
     position: relative;
+    line-height: 1.3;
     font-family: var(--ff-primary);
-    font-weight: var(--fw-bold);
+    font-weight: var(--fw-regular);
     text-transform: uppercase;
     display: inline-block;
 }
@@ -173,7 +174,7 @@
     }
 
     .card[data-section='services'] .card__body {
-        transform: translateY(54%);
+        transform: translateY(54.5%);
         transition: transform 500ms ease;
     }
     
