Optimize images file size
Images converted to .webp

--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -96,7 +96,7 @@
 
     .about-us__main-picture::before {
         content: '';
-        background: url(../../assets/images/about-us-main-picture.jpg) no-repeat;
+        background: url(../../assets/images/about-us-main-picture.webp) no-repeat;
         background-size: cover;
         background-position: center;
         position: absolute;
