--- a/src/index.css
+++ b/src/index.css
@@ -391,6 +391,9 @@ a:focus-visible {
 .padding-top-900 {
     padding-top: var(--size-900);
 }
+.padding-bottom-100 {
+    padding-bottom: var(--size-100);
+}
 .padding-bottom-200 {
     padding-bottom: var(--size-200);
 }
